crates/math-core/tests/snapshots/conversion_test__label_on_only_equation_row.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\begin{equation} x\\label{eq:1}\\end{equation}"
---
<math>
    <mtable displaystyle="true" scriptlevel="0" style="width: 100%">
        <mtr>
            <mtd style="width: 50%"></mtd>
            <mtd>
                <mi>x</mi>
            </mtd>
            <mtd style="width: 50%;text-align: right;justify-items: end;" id="eq:1">
                <mtext>(1)</mtext>
            </mtd>
        </mtr>
    </mtable>
</math>
