crates/math-core/tests/snapshots/conversion_test__label_url_escape.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\begin{align} 1\\label{ !()*+,-./0:;<=>?@|}\\\\\\eqref{ !()*+,-./0:;<=>?@|}\\end{align}"
---
<math>
    <mtable displaystyle="true" scriptlevel="0" style="width: 100%">
        <mtr>
            <mtd style="width: 50%"></mtd>
            <mtd style="text-align: right;justify-items: end;padding-right: 0;">
                <mn>1</mn>
            </mtd>
            <mtd style="width: 50%;text-align: right;justify-items: end;" id="%20!()*+,-./0:;%3C=%3E?@%7C">
                <mtext>(1)</mtext>
            </mtd>
        </mtr>
        <mtr>
            <mtd style="width: 50%"></mtd>
            <mtd style="text-align: right;justify-items: end;padding-right: 0;">
                <mtext><a href="#%20!()*+,-./0:;%3C=%3E?@%7C">(1)</a></mtext>
            </mtd>
            <mtd style="width: 50%;text-align: right;justify-items: end;">
                <mtext>(2)</mtext>
            </mtd>
        </mtr>
    </mtable>
</math>
