crates/math-core/tests/snapshots/conversion_test__lbrack_instead_of_bracket.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\sqrt\\lbrack 4]{2}"
---
<math>
    <msqrt>
        <mo stretchy="false">[</mo>
    </msqrt>
    <mn>4</mn>
    <mo stretchy="false">]</mo>
    <mn>2</mn>
</math>
