crates/math-core/tests/snapshots/conversion_test__left_right_different_stretch.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\left/\\frac12\\right)"
---
<math>
    <mrow>
        <mo stretchy="true" lspace="0" rspace="0">/</mo>
        <mfrac>
            <mn>1</mn>
            <mn>2</mn>
        </mfrac>
        <mo>)</mo>
    </mrow>
</math>
