crates/math-core/tests/snapshots/conversion_test__left_right_inner.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x\\left(\\frac12\\right)x"
---
<math>
    <mi>x</mi>
    <mrow>
        <mo lspace="0.1667em">(</mo>
        <mfrac>
            <mn>1</mn>
            <mn>2</mn>
        </mfrac>
        <mo rspace="0.1667em">)</mo>
    </mrow>
    <mi>x</mi>
</math>
