crates/math-core/tests/snapshots/conversion_test__left_right_inner_adjacent.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\left(x\\right)\\left(y\\right)"
---
<math>
    <mrow>
        <mo>(</mo>
        <mi>x</mi>
        <mo rspace="0.1667em">)</mo>
    </mrow>
    <mrow>
        <mo>(</mo>
        <mi>y</mi>
        <mo>)</mo>
    </mrow>
</math>
