crates/math-core/tests/snapshots/conversion_test__left_right_inner_after_open.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "(\\left(x\\right))"
---
<math>
    <mo stretchy="false">(</mo>
    <mrow>
        <mo>(</mo>
        <mi>x</mi>
        <mo>)</mo>
    </mrow>
    <mo stretchy="false">)</mo>
</math>
