crates/math-core/tests/snapshots/conversion_test__left_right_inner_in_script.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x^{a\\left(y\\right)b}"
---
<math>
    <msup>
        <mi>x</mi>
        <mrow>
            <mi>a</mi>
            <mrow>
                <mo>(</mo>
                <mi>y</mi>
                <mo>)</mo>
            </mrow>
            <mi>b</mi>
        </mrow>
    </msup>
</math>
